<resources>
    <string name="app_name">MySchool</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="connexion">connexion</string>
    <string name="subscribe">subscribe</string>
    <string name="title_activity_role">RoleActivity</string>
    <string name="title_activity__register">Activity_Register</string>
    <string name="title_activity_user_interface">UserInterface</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MOOC</string>
    <string name="nav_header_subtitle">Online School</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">home</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_statistical">Statistical</string>
    <string name="menu_help">help</string>
    <string name="menu_contact">contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visitor">visitor</string>
</resources>
